fix(switch): track on hover color in dark mode

--- a/sass/themes/schemas/components/dark/_switch.scss
+++ b/sass/themes/schemas/components/dark/_switch.scss
@@ -144,7 +144,7 @@ $dark-bootstrap-switch: extend(
 /// @prop {Map} thumb-on-color [contrast-color: ('gray', 50)] - The color of the thumb when the switch is on.
 /// @prop {Map} thumb-disabled-color [contrast-color: ('gray', 50, .2)] - The color of the thumb when the switch is disabled.
 /// @prop {Map} thumb-on-disabled-color [contrast-color: ('gray', 50, .2)] - The color of the thumb when the switch is on and disabled.
-/// @prop {Map} track-on-hover-color [color: ('primary', 300)] - The color of the track when the switch is on and hovered.
+/// @prop {Map} track-on-hover-color [color: ('primary', 400)] - The color of the track when the switch is on and hovered.
 /// @prop {Map} border-color [contrast-color: ('gray', 50, .6)] - The border color of the switch.
 /// @prop {Map} border-hover-color [contrast-color: ('gray', 50, .8)] - The border color of the switch on hover.
 /// @prop {Map} border-disabled-color [contrast-color: ('gray', 50, .2)] - The border color of the disabled switch.
@@ -212,7 +212,7 @@ $dark-indigo-switch: extend(
         track-on-hover-color: (
             color: (
                 'primary',
-                300,
+                400,
             ),
         ),
         border-color: (
